--- a/V3BighornVisitationAnalysisSummer2019.Rmd
+++ b/V3BighornVisitationAnalysisSummer2019.Rmd
@@ -1179,6 +1179,17 @@ pie(slices, labels = lbls, main = "Number of Visits by Time of Day")
 
 chisq.test(x = c(19, 453, 773, 297, 129, 27), p = c(4/24, 4/24, 4/24, 4/24, 4/24, 4/24))
 # X-squared = 1512.9, df = 5, p-value < 2.2e-16
+
+# Doing Os's correction:
+table(allrangetime1$Hour)
+#  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17  18  19  20  21  22  23 
+#  7   4   6   4   3  40 103 150 166 236 184 186 143 113  88  50  43  44  32  37  10   6   6   6
+chisq.test(x = c(7, 4, 6, 4, 3, 40, 103, 150, 166, 236, 184, 186, 143, 113, 88, 50, 43, 44, 32, 37, 10, 6, 6, 6), p = c(1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24, 1/24))
+# X-squared = 1736.3, df = 23, p-value < 2.2e-16
+percentvisitbyhour <- c(7/1667, 4/1667, 6/1667, 4/1667, 3/1667, 40/1667, 103/1667, 150/1667, 166/1667, 236/1667, 184/1667, 186/1667, 143/1667, 113/1667, 88/1667, 50/1667, 43/1667, 44/1667, 32/1667, 37/1667, 10/1667, 6/1667, 6/1667, 6/1667)
+plot(percentvisitbyhour, type = "o", ylab = "Percent of Bighorn Visits by Hour", xlab = "Hour", main = "Percent of Bighorn Visits by Time of Day")
+
+
 ```
 
 This is where I am going to leave off my basic analyses of the visitation data for the moment. When I have time, I still want to do the following analyses.
